--- a/portafolio.html
+++ b/portafolio.html
@@ -1,30 +1,60 @@
 <!DOCTYPE html>
-<html> 
+<html lang="es"> 
  <head>
-   <title>Portafolio_DiegoB</title>     
+       <meta charset="utf-8"/>
+       <title>Portafolio_DiegoB</title>     
+       <link rel="icon" type="image/png" href="imgs/favicon.jpg">
  </head>      
  <body>
   <header>
-   <nav>
-    <ol >
-     <li>
-       <a>Portafolio</a>      
-     </li> 
-     <li>
-       <a>Experienciao</a>      
-     </li>
-     <li>
-       <a>Trabajemos juntos</a>      
-     </li>     
-    </ol>      
-   </nav>      
+    <div>
+              <figure>
+                     <img src="imgs/logo.png"  alt="logo de http://leonidaEsteban.org"/>
+
+              </figure>
+              <nav>
+              <ol >
+              <li>
+                     <a href="#">Portafolio</a>      
+              </li> 
+              <li>
+                     <a href="#">Experienciao</a>      
+              </li>
+              <li>
+                     <a href="#" >Trabajemos juntos</a>      
+              </li>     
+              </ol>      
+              </nav>      
+    </div>
   </header>
   <section>
-   <h1>Q tal! Soy <strong>Diego Benitez</strong><br> Desarrollador <strong>Javascript</strong>y<br> Diseño<strong>User Experienc</strong> e</h1>     
+   <h1>Q tal! Soy <strong>Diego Benitez</strong><br> Desarrollador <strong>Javascript</strong>y<br> Diseño<strong>User Experience</strong> </h1>     
+   <img src="imgs/hero.jpg" width="500" alt="imagen principal del sitio"> 
+  </section> 
+  <section>
+   <article>
+    <h2>Portafolio (Proyectos destacados)</h2>   
+    <h3>Platzi Video</h3>
+    <h6>React Native/react</h6>
+    <p><small><strong>Fecha:</strong> 04/03/2018</small> </p>
+    <p><small><strong>Puedes verlo en: </strong> www.platzi.com/native</small> </p>
+    <p>Platzi Video fue el resultado de 3 meses de trabajo para crear la mejor app para enseñar el funcionamiento de React y React Native. Desde crear un vista-detalle, hasta patrones avanzados de navegación, este proyecto ha sido el ejemplo de futuros creadores de aplicaciones multiplataforma
+        El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto cómo tener una vida de constante aprendizaje.</p>
+       <img src="imgs/platzi-video-react-native.png" width="600" alt="img platzi -video">
+       </article>      
   </section>
-  <section>seccion principal</section>
-  <section>seccion portafolio</section>
-  <section>seccion eventos</section>
+  <section>
+     <h2>MAS SOBRE MI EXPERIENCIA</h2>    
+     <article>
+       <figure>
+             <img src="imgs/platzi-conf.jpg" width="500" alt="logo platzi conf"/> 
+       </figure>
+       <h3>PlatziConf Mexico 2018</h3>     
+       <p>El evento mas grande sobre gente que quiere aprender mas de internet En este evento te comparto como tener una
+               vida constante de aprendizaje.</p>
+       <a>Ver Platica</a>        
+       </article>    
+  </section>
   <section>seccion contactos</section>
   <footer>pie de pagina</footer>
  </body>
