--- a/portafolio.html
+++ b/portafolio.html
@@ -18,7 +18,7 @@
                      <a href="#">Portafolio</a>      
               </li> 
               <li>
-                     <a href="#">Experienciao</a>      
+                     <a href="#">Experiencia</a>      
               </li>
               <li>
                      <a href="#" >Trabajemos juntos</a>      
@@ -55,7 +55,16 @@
        <a>Ver Platica</a>        
        </article>    
   </section>
-  <section>seccion contactos</section>
+  <section>
+         <form action="subscripcion">
+                     <h3>¿Creamos algo juntos?</h3>
+                     <!--<label for="email">dejame tu email</label>-->
+                     <input type="text" placeholder="dejame tu email" id="email">
+                     <!--<input type="submit" value="enviar">-->
+                     <button>Enviar</button>
+         </form>
+        
+  </section>
   <footer>pie de pagina</footer>
  </body>
 </html>
