arreglando hero, footer y detallando header

--- a/portafolio.html
+++ b/portafolio.html
@@ -13,7 +13,7 @@
   <header class="header">
     
               <figure class="logo">
-                     <img src="imgs/logo.png"  alt="logo de http://leonidaEsteban.org"/>
+                     <img src="imgs/logo.png"  height="50" alt="logo de http://leonidaEsteban.org"/>
 
               </figure>
               <nav class="menu">
@@ -86,6 +86,13 @@
          </form>
          
   </section>
-  <footer class="footer">pie de pagina</footer>
+  <footer class="footer">
+         <div>
+                <p>Curso de desarrollo Web<img src="imgs/platzi.png" width="80px" alt="Platzi"> </p>
+         </div>
+         <div>
+                <p>Design with <\3 by <a href="https://twitter.com/thespianartist">@thespianartist</a></p>
+         </div>
+  </footer>
  </body>
 </html>
