--- a/portafolio.html
+++ b/portafolio.html
@@ -6,6 +6,9 @@
   <link rel="icon" type="image/png" href="imgs/favicon.jpg">
   <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro" rel="stylesheet">
   <link rel="stylesheet" href="./css/estilos.css">
+  <meta name="viewport" content="width=device-width, initial-scale=5">
+
+
       
  </head>
  <body>
