--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Portafolio_DiegoB</title>     
   <link rel="icon" type="image/png" href="imgs/favicon.jpg">
   
-  
+
   <meta name="viewport" content="width=device-width, initial-scale=5">
   <!-- <style>
     @media screen and (max-width: 768px){
@@ -160,8 +160,7 @@
     </div>
       
   </footer> 
-  <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro" rel="stylesheet">
-  <link rel="stylesheet" href="./css/estilos.css">
+  <link rel="stylesheet" href="./css/estilos.min.css">
   <script>
   
    const ipad=window.matchMedia('screen and (max-width:767px)');
@@ -215,5 +214,7 @@
 
 
   </script> 
+   <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro" rel="stylesheet">
+
  </body>
 </html>
