--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    <section class="hero">
       <div class="container">
         <h1>Q tal! Soy <strong>Diego Benitez</strong><br> Desarrollador <strong>Javascript</strong> y<br> Diseño<strong>User Experience</strong> </h1>     
-        <img  class="hero-images" src="imgs/hero.jpg"  alt="imagen principal del sitio">
+        <img  class="hero-images" src="imgs/hero.png"  alt="imagen principal del sitio">
        </div>
     </section> 
     <section id="portafolio" class="portfolio">
@@ -106,7 +106,7 @@
       </article>
       <article class="event">
         <figure class="event-imageContainer">
-          <img class="event-image" src="imgs/platzi-conf.jpg" width="500" alt="logo platzi conf"/> 
+          <img class="event-image" src="imgs/platzi-conf.png" width="500" alt="logo platzi conf"/> 
         </figure>
         <div class="event-details">
           <h3 class="event-title">PlatziConf Mexico 2018</h3>     
@@ -116,7 +116,7 @@
       </article>
       <article class="event">
         <figure class="event-imageContainer">
-          <img class="event-image" src="imgs/platzi-conf.jpg" width="500" alt="logo platzi conf"/> 
+          <img class="event-image" src="imgs/platzi-conf.png" width="500" alt="logo platzi conf"/> 
         </figure>
         <div class="event-details">
           <h3 class="event-title">PlatziConf Mexico 2018</h3>     
