--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    <section class="hero">
       <div class="container">
         <h1>Q tal! Soy <strong>Diego Benitez</strong><br> Desarrollador <strong>Javascript</strong> y<br> Diseño<strong>User Experience</strong> </h1>     
-        <img  class="hero-images" src="imgs/hero.png"  alt="imagen principal del sitio">
+        <img  class="hero-images" src="imgs/hero.png"  srcset="imgs/hero@2x.png 2x, platzi-conf@2x.png 2x, platzi@2x.png" alt="imagen principal del sitio">
        </div>
     </section> 
     <section id="portafolio" class="portfolio">
@@ -82,7 +82,7 @@
       <article class="event">
         <figure class="event-imageContainer">
           <!-- <img class="event-image" src="imgs/platzi-conf.jpg" width="500" alt="logo platzi conf"/>  -->
-          <video class="html-video" src="../videos/guitarra 1_Cornerstone_Tutorial_Hillsong.mp4" width="1280" height="720" controls></video>
+          <video class="html-video" src="#" width="1280" height="720" controls></video>
 
         </figure>
         <div class="event-details">
