--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    <section class="hero">
       <div class="container">
         <h1>Q tal! Soy <strong>Diego Benitez</strong><br> Desarrollador <strong>Javascript</strong> y<br> Diseño<strong>User Experience</strong> </h1>     
-        <img  class="hero-images" src="imgs/hero.png"  srcset="imgs/hero@2x.png 2x, platzi-conf@2x.png 2x, platzi@2x.png" alt="imagen principal del sitio">
+        <img  class="hero-images" src="imgs/hero.png"  srcset="imgs/hero@2x.png 2x" alt="imagen principal del sitio">
        </div>
     </section> 
     <section id="portafolio" class="portfolio">
@@ -106,7 +106,7 @@
       </article>
       <article class="event">
         <figure class="event-imageContainer">
-          <img class="event-image" src="imgs/platzi-conf.png" width="500" alt="logo platzi conf"/> 
+          <img class="event-image" src="imgs/platzi-conf.png"  srcset="platzi-conf@2x.png 2x"width="500" alt="logo platzi conf"/> 
         </figure>
         <div class="event-details">
           <h3 class="event-title">PlatziConf Mexico 2018</h3>     
@@ -116,7 +116,7 @@
       </article>
       <article class="event">
         <figure class="event-imageContainer">
-          <img class="event-image" src="imgs/platzi-conf.png" width="500" alt="logo platzi conf"/> 
+          <img class="event-image" src="imgs/platzi-conf.png" srcset="platzi-conf@2x.png 2x" width="500" alt="logo platzi conf"/> 
         </figure>
         <div class="event-details">
           <h3 class="event-title">PlatziConf Mexico 2018</h3>     
@@ -150,7 +150,7 @@
   <footer class="footer">
     <div class="container">
      <p>Curso de desarrollo Web </p>
-      <img src="imgs/platzi.png" width="80px" alt="Platzi">
+      <img src="imgs/platzi.png" srcset="platzi@2x.png 2x" width="80px" alt="Platzi">
      <p>Design with 💖 by <a href="https://twitter.com/thespianartist">@thespianartist</a></p>
     </div>
       
